<resources>
    <string name="app_name">مدیریت سالن</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">داشبورد</string>
    <string name="desc">توضیحات</string>
    <string name="discount">تخفیف</string>
    <string name="report">گزارشات</string>
    <string name="manage">مدیریت</string>
    <string name="orders">سفارشات</string>
    <string name="service">خدمات</string>
    <string name="service_list">لیست خدمات</string>
    <string name="service_name">نام خدمات</string>
    <string name="service_new">خدمات جدید</string>
    <string name="service_provide">ارائه خدمات </string>
    <string name="service_provided">خدمات ارائه شده</string>
    <string name="detail_service_provided">جزئیات خدمات ارائه شده</string>
    <string name="price">قیمت (تومان)</string>
    <string name="count">تعداد</string>
    <string name="customer_list">لیست مشتریان</string>
    <string name="customer_select">نام مشتری را وارد نمایید</string>
    <string name="customer_new"> مشتری جدید</string>
    <string name="staff_list">لیست پرسنل</string>
    <string name="staff_select">نام پرسنل را وارد نمایید</string>
    <string name="staff_new"> پرسنل جدید</string>
    <string name="product">فروش کالا</string>
    <string name="product_name">نام کالا</string>
    <string name="product_new">کالای جدید</string>
    <string name="product_list">لیست کالا</string>
    <string name="delete">حذف</string>
    <string name="delete_message">آیتم مورد نظر حذف شود؟</string>
    <string name="edit">ویرایش</string>
    <string name="cancel">انصراف</string>
    <string name="accept">تایید</string>
    <string name="user_name">نام و نام خانوادگی</string>
    <string name="mobile">موبایل</string>
    <string name="role">سمت</string>
    <string name="address">آدرس (اختیاری)</string>
    <string name="save">ذخیره</string>
    <string name="success">عملیات با موفقیت انجام شد.</string>
    <string name="mobil_require">شماره موبایل را وارد نمایید.</string>
    <string name="price_require">لطفا قیمت را وارد نمایید.</string>
    <string name="count_require">لطفا تعداد را وارد نمایید.</string>
    <string name="name_require">نام و نام خانوادگی را وارد نمایید.</string>
    <string name="name_service_require">نام خدمات را وارد نمایید.</string>
    <string name="name_product_require">نام کالا را وارد نمایید.</string>
    <string name="isPhone_message">لطفا شماره موبایل را صحیح وارد نمایید.</string>
    <string name="manager">مدیر</string>
    <string name="staff">پرسنل</string>
    <string name="secretary">منشی</string>
</resources>