<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.manage.ManageFragment">

    <include
        android:id="@+id/include"
        layout="@layout/view_toolbar_for_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@drawable/shape_divider"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/txt_product_list"
            style="@style/ManageLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_list"
            app:drawableStartCompat="@drawable/ic_shopping_cart_black" />

        <TextView
            android:id="@+id/txt_staff_list"
            style="@style/ManageLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staff_list"
            app:drawableStartCompat="@drawable/ic_person_black" />

        <TextView
            android:id="@+id/txt_service_list"
            style="@style/ManageLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_list"
            app:drawableStartCompat="@drawable/ic_cart_black" />

        <TextView
            android:id="@+id/txt_customer_list"
            style="@style/ManageLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_list"
            app:drawableStartCompat="@drawable/ic_user_black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>